--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>Sadh Care Hospital</title>
 </head>
 
 <body>
@@ -26,7 +26,6 @@
   <script src="%PUBLIC_URL%/plugins/jquery-ui/jquery-ui.js" defer></script>
   <script src="%PUBLIC_URL%/plugins/timePicker/timePicker.js" defer></script>
   <script src="%PUBLIC_URL%/js/script.js"></script>
-
 </body>
 
 </html>
