--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
+  <script type="text/javascript" src="https://checkout.razorpay.com/v1/razorpay.js"></script>
   <script src="%PUBLIC_URL%/plugins/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/plugins/bootstrap/bootstrap.min.js"></script>
   <script src="%PUBLIC_URL%/plugins/slick/slick.min.js"></script>
